--- a/index.html
+++ b/index.html
@@ -107,7 +107,10 @@
       <h2 class="title is-3 has-text-centered">Download</h2>
       <p class="has-text-centered">You can download the dataset using the links below:</p>
       <div class="buttons is-centered">
-        <a class="button is-primary" href="https://huggingface.co/datasets/LejuRobotics/kuavo_data_challenge/tree/main">Download Dataset (huggingface)</a>
+        <a class="button is-primary" href="https://huggingface.co/datasets/LejuRobotics/kuavo_data_challenge/tree/main">
+          <i class="fas fa-download"></i> Download Dataset (huggingface)
+        </a>
+        <!-- <a class="button is-primary" href="https://huggingface.co/datasets/LejuRobotics/kuavo_data_challenge/tree/main">Download Dataset (huggingface)</a> -->
         <!-- <a class="button is-link" href="https://example.com/documentation.pdf">Download Documentation</a> -->
       </div>
     </div>
